--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Budowa</title>
+	<title>yu</title>
 	<meta name="description" content="Artykuly budowlane" />
 	<meta name="keywords" content="budowa, pomieszczenia, remonty, przeprowadzki" />
 	<meta name="author" content="Olaf" />
