--- a/index.html
+++ b/index.html
@@ -1,130 +1,161 @@
-<!DOCTYPE HTML>
-<html lang="pl">
+<!DOCTYPE html>
+<html lang='en'>
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>yu</title>
-	<meta name="description" content="Artykuly budowlane" />
-	<meta name="keywords" content="budowa, pomieszczenia, remonty, przeprowadzki" />
-	<meta name="author" content="Olaf" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<link rel="stylesheet" href="css/style.css" type="text/css" />
-	<link rel="stylesheet" href="css/animation.css" type="text/css" />
+    <meta charset='UTF-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel='stylesheet' href='css/animation.css' type='text/css' />
+    <link rel='stylesheet' href='css/style.css' type='text/css' />
+    <script defer src='script.js'></script>
+    <title>Document</title>
 </head>
 
 <body>
-	<div id="CONTAINER">
-		<div id="LAYER">
-			<a href="index.php">
-				<div class="LOGO">
-					<img src="css/foto/pasek/logo.png" />
-				</div>
-			</a>
-			<button class="MENU">
-				<span class="HAMBURGER_MENU">
-					<span class="HAMBURGER_CLICK"></span>
-				</span>
-			</button>
-			<div class="navigation">
-				<ul class="navigation__list">
-					<li class="navigation__item"><a href="">O mnie</a></li>
-					<li class="navigation__item"><a href="">Umiejętności</a></li>
-					<li class="navigation__item"><a href="">Zainteresowania</a></li>
-					<li class="navigation__item"><a href="">Doswiadczenie</a></li>
-					<li class="navigation__item"><a href="">Kontakt</a></li>
-				</ul>
-			</div>
-		</div>
+    <div class='cointainer'>
+        <div id='Layer_Menu'>
+            <button class='MENU'>
+                <span class='HAMBURGER_MENU'>
+                    <span class='HAMBURGER_CLICK'></span>
+                </span>
+            </button>
+            <div class='navigation'>
+                <ul class='navigation_list'>
+                    <li><button class='menu_mobile' type='button'>Strona glowna</button></li>
+                    <li><button class='menu_mobile' type='button'>Informacje</button></li>
+                    <li><button class='menu_mobile' type='button'>Projekty</button></li>
+                    <li><button class='menu_mobile' type='button'>Kontakt</button></li>
+                </ul>
+            </div>
+            <nav>
+                <ul id='_Menu'>
+                    <li><button class='menu_button' type='button'>Strona glowna</button></li>
+                    <li><button class='menu_button' type='button'>Informacje</button></li>
+                    <li><button class='menu_button' type='button'>Projekty</button></li>
+                    <li><button class='menu_button' type='button'>Kontakt</button></li>
+                </ul>
+            </nav>
+        </div>
+        <div id='photo'>
+            <div id='textOn'>
+                Falo<br>
+                QR<br>
+            </div>
+        </div>
+        <div class='Layer_Center Strona_glowna'>
+            <div id='row'>
+                <div id='Main_Text'>
+                    O mnie
+                </div>
+                <div id='img'>
+                    <img src='css/photo/herb-green-leaf.png' />
+                </div>
+            </div>
+            <div class='Description_Text'>
+                W pracy dążę głównie do samorozwoju i polepszania swoich kompetencji zawodowych oraz zdobycia nowych
+                umiejętności. Interesują mnie technologie webowe i skupiam się na rozwoju umiejętności związanych z
+                nimi.
+            </div>
+        </div>
+        <div class='Layer_Center Info'>
+            <div id='row'>
+                <div id='Main_Text'>
+                    Umiejętności
+                </div>
+                <div id='img'>
+                    <img src='css/photo/shop.png' />
+                </div>
+            </div>
+            <div class='Description_Text'>
+                CSS <br>
+                PHP <br>
+                MYSQL <br>
+                JAVASCRIPT
 
-		<div class="PHOTO">
-			<div class="BOXTITLEFIELD">
-				Olaf Kubiarczyk
-			</div>
-		</div>
+            </div>
+        </div>
+        <div class='Layer_Center'>
+            <div id='row'>
+                <div id='Main_Text'>
+                    Liczba bukietów
+                </div>
+                <div id='img'>
+                    <img src='css/photo/basket.png' />
+                </div>
+            </div>
+            <div class='Description_Text script'>
+            </div>
+        </div>
+        <div class='Layer_Center Zdjecia'>
+            <div id='row'>
+                <div id='Main_Text'>
+                    Wykonane projekty
+                </div>
+                <div id='img'>
+                    <img src='css/photo/honey.png' />
+                </div>
+            </div>
+
+        </div>
+        <div class='Layer_Center'>
+
+            <div class='foto'>
+                <div class='openfoto'>
+                </div>
+            </div>
+
+        </div>
+
+        <div class='Layer_Center'></div>
+        <div id='Information'>
+            <div id="Info">
+                <div id="Inf">
+                    <img src='css/photo/location.png' />
+                    flsofkoskgoslfdo
+                </div>
+                <div id="Inf">
+                    <img src='css/photo/phone.png' />
+                    0
+                </div>
+                <div id="Inf">
+                    <img src='css/photo/at.png' />
+                    @
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class='field'>
+        <img src='css/photo/z.png' />
+        <img src='css/photo/zd.png' />
+        <img src='css/photo/f.png' />
+        <img src='css/photo/fo.png' />
+        <img src='css/photo/z.png' />
+        <img src='css/photo/zd.png' />
+        <img src='css/photo/f.png' />
+        <img src='css/photo/fo.png' />
+        <img src='css/photo/z.png' />
+        <img src='css/photo/zd.png' />
+        <img src='css/photo/f.png' />
+        <img src='css/photo/fo.png' />
+        <img src='css/photo/z.png' />
+        <img src='css/photo/zd.png' />
+        <img src='css/photo/f.png' />
+        <img src='css/photo/fo.png' />
+        <img src='css/photo/z.png' />
+        <img src='css/photo/zd.png' />
+        <img src='css/photo/f.png' />
+        <img src='css/photo/fo.png' />
+        <img src='css/photo/z.png' />
+        <img src='css/photo/zd.png' />
+        <img src='css/photo/f.png' />
+        <img src='css/photo/fo.png' />
+        <div id='return'></div>
+    </div>
+    <div class='scrollLayer'></div>
 
 
-		<div class="BOX">
-			<div class="BOXDESCRIPTION">
-				<div class="fontimportant">O mnie</div>
-				<div class="BOXPHOTO">
-					<img src="css/foto/pliki_glowne/person.png" />
-				</div>
-			</div>
-			<div class="BOXDESCRIPTIVEFIELD">
-				<div class="font">
-					W pracy dążę głównie do samorozwoju i polepszania swoich kompetencji zawodowych oraz
-					zdobycia
-					nowych
-					umiejętności. Interesują mnie technologie webowe i skupiam się na rozwoju umiejętności
-					związanych z
-					nimi.
-				</div>
-			</div>
-		</div>
+    </div>
 
-
-		<div class="BOX">
-			<div class="BOXDESCRIPTION">
-				<div class="fontimportant">Umiejętności:</div>
-				<div class="BOXPHOTO">
-					<img src="css/foto/pliki_glowne/person.png" />
-				</div>
-			</div>
-			<div class="BOXDESCRIPTIVEFIELD">
-				<div class="font">
-					CSS</br> PHP</br>
-					MYSQL</br> JAVASCRIPT</br>
-				</div>
-			</div>
-			<div class="BOXDESCRIPTIVEFIELD">
-				<div class="font">
-					<div class="fontimportant"> Projekty: </div>
-				</div>
-			</div>
-			<div class="BOXDESCRIPTIVEFIELD FOOTER">
-				<div class="font">
-					<div class="fontimportant"> Kontakt: </div>
-					<div class="BOXDESCRIPTION">
-						<div class="FOOTERINFO">
-							<img src="css/foto/pliki_glowne/letter.png" />
-						</div>
-						<div class="BOXDESCRIPTIVEFIELD">
-							<div class="font">
-								olaf.kubiarczyk@gmail.com
-							</div>
-						</div>
-					</div>
-					<div class="BOXDESCRIPTION">
-						<div class="FOOTERINFO">
-							<img src="css/foto/pliki_glowne/hub.png" />
-						</div>
-						<div class="BOXDESCRIPTIVEFIELD">
-							<div class="font">
-								https://github.com/FaloNp
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-
-
-	</div>
-	</div>
-	<script>
-		const hamburger = document.querySelector('.MENU');
-		const nav = document.querySelector('.navigation');
-
-		const handleClick = () => {
-			hamburger.classList.toggle('MENU_CLICKED');
-			nav.classList.toggle('navigation--active');
-		}
-
-		hamburger.addEventListener('click', handleClick);
-	</script>
 </body>
 
 </html>
