--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class='cointainer'>
+        <div class='Pho'></div>
         <div id='Layer_Menu'>
             <button class='MENU'>
                 <span class='HAMBURGER_MENU'>
@@ -36,12 +37,13 @@
                 </ul>
             </nav>
         </div>
-        <div id='photo'>
+        <div class='photo'>
             <div id='textOn'>
                 Falo<br>
                 QR<br>
             </div>
         </div>
+        <div class='Layer_Center'></div>
         <div class='Layer_Center Strona_glowna'>
             <div id='row'>
                 <div id='Main_Text'>
@@ -95,17 +97,11 @@
                     <img src='css/photo/honey.png' />
                 </div>
             </div>
-
-        </div>
-        <div class='Layer_Center'>
-
             <div class='foto'>
                 <div class='openfoto'>
                 </div>
             </div>
-
         </div>
-
         <div class='Layer_Center'></div>
         <div id='Information'>
             <div id="Info">
