--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         </div>
         <div class='Layer_Center'></div>
         <div class='Layer_Center Strona_glowna'>
+            <div class='foto'>
+                <div class='fotoU'>
+                </div>
+            </div>
             <div id='row'>
                 <div id='Main_Text'>
                     O mnie
