--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
                 <div id='Main_Text'>
                     O mnie
                 </div>
-                <div id='img'>
-                    <img src='css/photo/herb-green-leaf.png' />
-                </div>
             </div>
             <div class='Description_Text'>
                 W pracy dążę głównie do samorozwoju i polepszania swoich kompetencji zawodowych oraz zdobycia nowych
@@ -69,24 +66,67 @@
                     Umiejętności
                 </div>
                 <div id='img'>
-                    <img src='css/photo/shop.png' />
+
                 </div>
             </div>
-            <div class='Description_Text'>
-                CSS <br>
-                PHP <br>
-                MYSQL <br>
-                JAVASCRIPT
-
+            <div id='row'>
+                CSS
+                <div class="PB">
+                    <div class="PBEM">
+                        <div class="PBNO">
+                            <div class="PBTE">
+                                10%
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div id='row'>
+                PHP
+                <div class="PB">
+                    <div class="PBEM">
+                        <div class="PBNO">
+                            <div class="PBTE">
+                                10%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id='row'>
+                JavaScript
+                <div class="PB">
+                    <div class="PBEM">
+                        <div class="PBNO">
+                            <div class="PBTE">
+                                10%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id='row'>
+                MySQL
+                <div class="PB">
+                    <div class="PBEM">
+                        <div class="PBNO">
+                            <div class="PBTE">
+                                10%
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
         <div class='Layer_Center'>
             <div id='row'>
                 <div id='Main_Text'>
-                    Liczba bukietów
+                    Inne Umiejętności
                 </div>
                 <div id='img'>
-                    <img src='css/photo/basket.png' />
+
                 </div>
             </div>
             <div class='Description_Text script'>
@@ -98,7 +138,7 @@
                     Wykonane projekty
                 </div>
                 <div id='img'>
-                    <img src='css/photo/honey.png' />
+
                 </div>
             </div>
             <div class='foto'>
